[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["full"] }
wgpu = "22.1.0"
winit = {version = "0.29", features = ["rwh_05"]}
