[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle"] }
env_logger = "0.11.5"
fastrand = "2.1.1"
image = "0.25.2"
itertools = "0.13.0"
log = "0.4.22"
pollster = "0.3.0"
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
wgpu = "22.1.0"
winit = { path = "../winit", features = ["rwh_06"] }
#winit = { version = "0.29", features = ["rwh_05"] }
