[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle"] }
env_logger = "0.11.5"
fastrand = "2.1.1"
image = "0.25.2"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
loop-code = "0.5.2"
pollster = "0.3.0"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
wgpu = "22.1.0"
winit = { path = "../winit", features = ["rwh_06"] }
#winit = { version = "0.29", features = ["rwh_05"] }

#[profile.release]
#opt-level = 3           # Maximize optimization level
#lto = true               # Enable Link Time Optimization
#panic = "abort"          # Abort on panic, reduces binary size
#codegen-units = 1        # Reduce the number of codegen units (can improve optimization at the cost of compilation time)
#debuginfo = 0            # Disable debug info for smaller binaries
#rpath = false            # Disable rpath (optional, depending on your use case)
